--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vuesax": "^3.12.2"
   },
